# nmpde-projects

./: CMakeLists.txt
report/: report.md  report.tex
resources/: paper-notes.md
src/: FisherKolmogorov.cpp  FisherKolmogorov.hpp  LinearFisherKolmogorov.cpp  LinearFisherKolmogorov.hpp  main.cpp
src/explicit/: ExplicitMain.cpp  ExplicitSolver.cpp  ExplicitSolver.hpp
src/implicit/: ImplicitMain.cpp  ImplicitSolver.cpp  ImplicitSolver.hpp
src/mixed/: MixedMain.cpp  MixedSolver.cpp  MixedSolver.hpp
